# Stero_proj2

src/mobile_STERO-19Z-Bugyi-Pierczyk/: CMakeLists.txt  package.xml
src/mobile_STERO-19Z-Bugyi-Pierczyk/config/: elektron_Tower_control.yaml  parameters_global.yaml  parameters_local.yaml
src/mobile_STERO-19Z-Bugyi-Pierczyk/launch/: MyLaunch.launch  my world.launch
src/mobile_STERO-19Z-Bugyi-Pierczyk/maps/: map_fail.yaml
src/mobile_STERO-19Z-Bugyi-Pierczyk/scripts/: errors_measuring.py  errors_measuring_with_laser.py  footprint.cpp  generate_path.py  generate_path_test.py  lab_1_ex_1.py  lab_1_ex_2.py  lab_1_ex_2_laser.py  lab_2_ex_1.py  projekt_2_srv.cpp
src/mobile_STERO-19Z-Bugyi-Pierczyk/srv/: Service.srv  projekt_2_srv.cpp
